# IssuePilot

./: .env.example  .gitignore  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: __init__.py  ai_engine.py  database.py  duplicate_finder.py  github_client.py  main.py  repository.py  schemas.py  utils.py  webhook.py
backend/tests/: __init__.py  test_ai_engine.py  test_api.py  test_database.py  test_duplicate_finder.py  test_github_client.py  test_utils.py  test_webhook.py
cli/: issuepilot.py  setup.py
docs/: GOOD_FIRST_ISSUES.md  SETUP.md  api.md  architecture.md  configuration.md  development.md  frontend.md
examples/: .issuepilotrc.example  example_output.json  example_output.md  sample_request.json
frontend/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/__tests__/: utils.test.ts
frontend/__tests__/components/: issue-input.test.tsx
frontend/__tests__/hooks/: use-rate-limit.test.tsx
frontend/__tests__/stores/: history-store.test.ts  (+1 more)
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: providers.tsx
frontend/hooks/: use-analyze.ts  use-keyboard-shortcuts.ts  use-rate-limit.ts
frontend/lib/: api-client.ts  constants.ts  utils.ts
frontend/stores/: history-store.ts  settings-store.ts
frontend/types/: api.ts  index.ts
(+15 files in other folders)
